syntax = "proto3";

package patients;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Patient service for microservices communication
service PatientService {
  // Patient CRUD operations
  rpc CreatePatient(CreatePatientRequest) returns (PatientResponse);
  rpc GetPatient(GetPatientRequest) returns (PatientResponse);
  rpc UpdatePatient(UpdatePatientRequest) returns (PatientResponse);
  rpc DeletePatient(DeletePatientRequest) returns (google.protobuf.Empty);

  // Patient search and query
  rpc SearchPatients(SearchPatientsRequest) returns (PatientListResponse);
  rpc GetPatientByMRN(GetPatientByMRNRequest) returns (PatientResponse);

  // Patient medical history
  rpc GetPatientHistory(GetPatientHistoryRequest) returns (PatientHistoryResponse);
  rpc AddMedicalRecord(AddMedicalRecordRequest) returns (MedicalRecordResponse);

  // Patient demographics
  rpc UpdateDemographics(UpdateDemographicsRequest) returns (PatientResponse);
  rpc GetEmergencyContacts(GetEmergencyContactsRequest) returns (EmergencyContactsResponse);

  // Bulk operations
  rpc BatchCreatePatients(BatchCreatePatientsRequest) returns (BatchCreatePatientsResponse);
  rpc ValidatePatientData(ValidatePatientDataRequest) returns (ValidationResponse);
}

// Patient message types
message Patient {
  int64 id = 1;
  string medical_record_number = 2;
  string first_name = 3;
  string last_name = 4;
  string date_of_birth = 5;
  string gender = 6;
  string blood_type = 7;
  string phone = 8;
  string email = 9;
  string address = 10;
  string emergency_contact_name = 11;
  string emergency_contact_phone = 12;
  string emergency_contact_relationship = 13;
  string marital_status = 14;
  string occupation = 15;
  string employer = 16;
  string insurance_provider = 17;
  string insurance_policy_number = 18;
  string primary_care_physician = 19;
  string allergies = 20;
  string medications = 21;
  string chronic_conditions = 22;
  string family_history = 23;
  string social_history = 24;
  google.protobuf.Timestamp created_at = 25;
  google.protobuf.Timestamp updated_at = 26;
  bool is_active = 27;
  string notes = 28;
}

message MedicalRecord {
  int64 id = 1;
  int64 patient_id = 2;
  string record_type = 3;
  string title = 4;
  string description = 5;
  string data = 6;
  string provider_name = 7;
  google.protobuf.Timestamp record_date = 8;
  google.protobuf.Timestamp created_at = 9;
}

message EmergencyContact {
  int64 id = 1;
  int64 patient_id = 2;
  string name = 3;
  string relationship = 4;
  string phone = 5;
  string email = 6;
  string address = 7;
  bool is_primary = 8;
  google.protobuf.Timestamp created_at = 9;
}

// Request/Response messages
message CreatePatientRequest {
  Patient patient = 1;
}

message GetPatientRequest {
  int64 patient_id = 1;
}

message UpdatePatientRequest {
  int64 patient_id = 1;
  Patient patient = 2;
}

message DeletePatientRequest {
  int64 patient_id = 1;
}

message PatientResponse {
  Patient patient = 1;
  bool success = 2;
  string message = 3;
}

message SearchPatientsRequest {
  string query = 1;
  string date_of_birth = 2;
  string phone = 3;
  string email = 4;
  string medical_record_number = 5;
  int32 page = 6;
  int32 page_size = 7;
  string sort_by = 8;
  string sort_order = 9;
}

message PatientListResponse {
  repeated Patient patients = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
  bool success = 5;
  string message = 6;
}

message GetPatientByMRNRequest {
  string medical_record_number = 1;
}

message GetPatientHistoryRequest {
  int64 patient_id = 1;
  google.protobuf.Timestamp start_date = 2;
  google.protobuf.Timestamp end_date = 3;
  string record_type = 4;
}

message PatientHistoryResponse {
  repeated MedicalRecord records = 1;
  bool success = 2;
  string message = 3;
}

message AddMedicalRecordRequest {
  int64 patient_id = 1;
  MedicalRecord record = 2;
}

message MedicalRecordResponse {
  MedicalRecord record = 1;
  bool success = 2;
  string message = 3;
}

message UpdateDemographicsRequest {
  int64 patient_id = 1;
  string address = 2;
  string phone = 3;
  string email = 4;
  string emergency_contact_name = 5;
  string emergency_contact_phone = 6;
  string emergency_contact_relationship = 7;
  string insurance_provider = 8;
  string insurance_policy_number = 9;
}

message GetEmergencyContactsRequest {
  int64 patient_id = 1;
}

message EmergencyContactsResponse {
  repeated EmergencyContact contacts = 1;
  bool success = 2;
  string message = 3;
}

message BatchCreatePatientsRequest {
  repeated Patient patients = 1;
}

message BatchCreatePatientsResponse {
  repeated PatientResponse results = 1;
  int32 success_count = 2;
  int32 failure_count = 3;
}

message ValidatePatientDataRequest {
  Patient patient = 1;
}

message ValidationResponse {
  bool is_valid = 1;
  repeated string errors = 2;
  repeated string warnings = 3;
}